--- a/index.html
+++ b/index.html
@@ -1,195 +1,72 @@
 <!DOCTYPE html>
 <html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sann Store - Toko fashion Online</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DarkStore - Beranda</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
     <header>
-      <div class="header-container">
-        <a href="#" class="logo">SannStore</a>
-        <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
-          ☰
-        </button>
-        <a href="#" class="cart-icon">
-          🛒
-          <span class="cart-count">0</span>
-        </a>
-      </div>
-      <nav>
-        <div class="nav-container">
-          <ul class="nav-menu" id="navMenu">
-            <li><a href="#beranda">Beranda</a></li>
-            <li><a href="#produk">Produk</a></li>
-            <li><a href="#kategori">Kategori</a></li>
-            <li><a href="#tentang">Tentang Kami</a></li>
-            <li><a href="#kontak">Kontak</a></li>
-          </ul>
-        </div>
-      </nav>
+        <h1>SannShoes</h1>
+        <nav>
+            <a href="index.html">Beranda</a>
+            <a href="#produk">Produk</a>
+            <a href="kontak.html">Kontak</a>
+            <a href="#" onclick="showCart()">Keranjang <span id="cart-count">0</span></a>
+        </nav>
     </header>
 
-    <main>
-      <section id="beranda">
-        <section class="hero">
-          <h1>Selamat Datang di SannStore</h1>
-          <p>Temukan fashion dan terbaru dengan harga terjangkau</p>
-          <a href="#produk" class="cta-button">Belanja Sekarang</a>
-        </section>
-      </section>
-
-      <section id="produk">
-        <h2>Produk Terbaru</h2>
-        <div class="product-grid">
-          <article class="product-card">
-            <div class="product-image">👟</div>
-            <div class="product-info">
-              <h3 class="product-name">Adidas Superstar</h3>
-              <p class="product-description">
-                Adidas Superstar
-Deskripsi: Model klasik sejak 1969 dengan desain kulit putih dan shell toe khas. Cocok untuk gaya kasual dan streetwear.
-              </p>
-              <div class="product-price">Rp 1.399.000</div>
-              <button class="add-to-cart" onclick="addToCart()">
-                Tambah ke Keranjang
-              </button>
-            </div>
-          </article>
-
-          <article class="product-card">
-            <div class="product-image">👟</div>
-            <div class="product-info">
-              <h3 class="product-name">Adidas Stan Smith</h3>
-              <p class="product-description">
-              Adidas Stan Smith
-Deskripsi: Awalnya dirancang untuk tenis, kini menjadi simbol gaya minimalis dengan kulit putih dan perforasi tiga garis.  
-              </p>
-              <div class="product-price">Rp 1.500.000</div>
-              <button class="add-to-cart" onclick="addToCart()">
-                Tambah ke Keranjang
-              </button>
-            </div>
-          </article>
-
-          <article class="product-card">
-            <div class="product-image">👟</div>
-            <div class="product-info">
-              <h3 class="product-name">Adidas NMD R1</h3>
-              <p class="product-description">
-                Keyboard wireless premium dengan tombol nyaman dan backlight otomatis.
-              </p>
-              <div class="product-price">Rp 3.500.000</div>
-              <button class="add-to-cart" onclick="addToCart()">
-                Tambah ke Keranjang
-              </button>
-            </div>
-          </article>
-
-          <article class="product-card">
-            <div class="product-image">👕</div>
-            <div Supreme Tyler The Creator Black Tee FW24</h3>
-              <p class="product-description">
-                Supreme Tyler The Creator Black Tee FW24
-
-Deskripsi: Kaos hitam dengan desain kolaborasi bersama Tyler The Creator, menampilkan grafis unik di bagian depan.
-              </p>
-              <div class="product-price">Rp 4.500.000</div>
-              <button class="add-to-cart" onclick="addToCart()">
-                Tambah ke Keranjang
-              </button>
-            </div>
-          </article>
+    <section id="produk" class="products">
+        <!-- Produk cards -->
+        <div class="product-card">
+            <img src="images/produk1.jpg" alt="Sepatu 1">
+            <h3>Sepatu New Balance</h3>
+            <p>Rp 1.735.000</p>
+            <a href="produk1.html" class="btn">Beli Sekarang</a>
+            <button onclick="addToCart('Sepatu New Balance', 1735000)">Tambah ke Keranjang</button>
         </div>
-      </section>
-
-      <section id="kategori">
-        <h2>Kategori produk</h2>
-        <div class="categories">
-          <div class="category-card">
-            <div class="category-icon">👟</div>
-            <h3>sepatu</h3>
-            <p>nyaman dan bikin keren</p>
-          </div>
-          <div class="category-card">
-            <div class="category-icon">👟</div>
-            <h3>Sepatu</h3>
-            <p>nyaman dan kece</p>
-          </div>
-          <div class="category-card">
-            <div class="category-icon">👟</div>
-            <h3>Keyboard</h3>
-            <p>keren dan nyaman</p>
-          </div>
-          <div class="category-card">
-            <div class="category-icon">👕</div>
-            <h3>baju</h3>
-            <p>keren ke penampilan</p>
-          </div>
+        <div class="product-card">
+            <img src="images/produk2.jpg" alt="Sepatu 2">
+            <h3>Sepatu Arza Docmart</h3>
+            <p>Rp 300.000</p>
+            <a href="produk2.html" class="btn">Beli Sekarang</a>
+            <button onclick="addToCart('Sepatu Arza Docmart', 300000)">Tambah ke Keranjang</button>
         </div>
-      </section>
-
-      <section id="tentang">
-        <h2>Tentang Kami</h2>
-        <div class="about-content">
-          <p>
-            SannStore adalah toko fashion online terpercaya yang menyediakan
-            berbagai fashion terbaru dengan kualitas
-            terjamin.
-          </p>
-          <p>
-            Kami berkomitmen untuk memberikan pengalaman berbelanja yang mudah,
-            aman, dan memuaskan dengan layanan pelanggan terbaik dan jaminan
-            produk original.
-          </p>
-          <p>
-            Dengan pengalaman lebih dari 10 tahun di industri teknologi, kami
-            telah melayani ribuan pelanggan di seluruh Indonesia dengan kepuasan
-            mencapai 98%.
-          </p>
+        <div class="product-card">
+            <img src="images/produk3.jpg" alt="Sepatu 3">
+            <h3>Sepatu Air Jordan 1 Low Pine</h3>
+            <p>Rp 1.500.000</p>
+            <a href="produk3.html" class="btn">Beli Sekarang</a>
+            <button onclick="addToCart('Sepatu Air Jordan 1 Low Pine', 1500000)">Tambah ke Keranjang</button>
         </div>
-      </section>
-    </main>
+        <div class="product-card">
+            <img src="images/produk4.jpg" alt="Sepatu 4">
+            <h3>Sepatu Puma Speedcat OG nere </h3>
+            <p>Rp 1.899.000</p>
+            <a href="produk4.html" class="btn">Beli Sekarang</a>
+            <button onclick="addToCart('Sepatu Puma Speedcat OG nere', 1899000)">Tambah ke Keranjang</button>
+        </div>
+        <div class="product-card">
+            <img src="images/produk5.jpg" alt="Sepatu 5">
+            <h3>Sepatu Adidas Samba Casual</h3>
+            <p>Rp 2.384.000</p>
+            <a href="produk5.html" class="btn">Beli Sekarang</a>
+            <button onclick="addToCart('Sepatu Adidas Samba Casual', 2384000)">Tambah ke Keranjang</button>
+        </div>
+    </section>
+
+    <section id="cart" class="cart-section">
+        <h2>Keranjang Belanja</h2>
+        <div id="cart-items"></div>
+        <p class="cart-total">Total: <span id="cart-total">Rp 0</span></p>
+    </section>
 
     <footer>
-      <div class="footer-content">
-        <div class="footer-section">
-          <h3>SannStore</h3>
-          <p>
-            Toko fashion online terpercaya dengan produk berkualitas dan
-            pelayanan terbaik.
-          </p>
-        </div>
-        <div class="footer-section">
-          <h3>Tautan Cepat</h3>
-          <p><a href="#">Beranda</a></p>
-          <p><a href="#produk">Produk</a></p>
-          <p><a href="#kategori">Kategori</a></p>
-          <p><a href="#tentang">Tentang Kami</a></p>
-        </div>
-        <div class="footer-section">
-          <h3>Layanan</h3>
-          <p><a href="#">Bantuan</a></p>
-          <p><a href="#">Kebijakan Privasi</a></p>
-          <p><a href="#">Syarat & Ketentuan</a></p>
-          <p><a href="#">Pengembalian</a></p>
-        </div>
-        <div class="footer-section">
-          <section id="kontak">
-            <h3>Kontak</h3>
-            <p>Email: info@sannstore.com</p>
-            <p>Telepon: (021) 123-4666</p>
-            <p>WhatsApp: +62 852-8969-6804</p>
-          </section>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; 2025 SannStore. Seluruh hak cipta dilindungi.</p>
-      </div>
+        <p>© 2025 SannShoes - Toko Sepatu Online</p>
+        <p>Email: sannshoes@mail.com | Telp: 085289696804</p>
     </footer>
 
-    <script src="script.js"></script>
-  </body>
-  </html>
-                                      
+    <script src="js/script.js"></script>
+</body>
+</html>
